course/project/todo-back/manifests/postgre-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proj-postgres-svc
  namespace: project
  labels:
    app: proj-postgres
spec:
  ports:
  - port: 5432
    name: proj-postgres
  clusterIP: None
  selector:
    app: proj-postgres
