course/project/todo-back/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-back-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todo-back
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3011
